# learn-MLIR

./: .gitmodules  README.md
learn-mlir/lear_dialect/: CMakeLists.txt
learn-mlir/learn_tablegen/: CMakeLists.txt  toy.td
learn_cpp/: CMakeLists.txt
learn_cpp/destructor/: try_destructor.cc
learn_llvm/: CMakeLists.txt  ast.cc
learn_llvm/my_try/: CMakeLists.txt  read_file  read_file.cc  try_gettok.cc
learn_llvm/toy/: CMakeLists.txt
learn_mlir/learn_cmake_func/: CMakeLists.txt  main.cc
learn_mlir/learn_dialect/: Ops.td  main.cc
learn_mlir/script/: use_talbelgen.sh
script/: build_mlir.sh
